Changes and rework for pac4j 5 (#239)
* added .fbExcludeFilterFile to .gitignore, changed pac4j to 5.3.1,
changed jersey-pac4j back to 2.35, added tests to jersey228-pac4j,
reworked dependencies-management

* Refactoring for SessionStore providers and simplified usage by providing
an implementation specific feature

* We will need Java 11 for pac4j 5

Co-authored-by: Michael Kohlsche <SiMiKohl@users.noreply.github.com>